welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: '(' expected but identifier found.
   		if !(getCouleurSol() == Color.green)
                   ^