welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
   while (!estSurBiscuit)
   	{ avance()
   		if !(getCouleurSol() == Color.green)
   		 {recule(); droite(); avance()}}   			
}        
